--- a/Prototype/Assembly-CSharp-vs.csproj
+++ b/Prototype/Assembly-CSharp-vs.csproj
@@ -51,9 +51,9 @@
      <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\HealthPickup.cs" />
      <Compile Include="Assets\Scripts\LaunchScreenManager.cs" />
-     <Compile Include="Assets\Scripts\PlayerControllerScript.cs" />
-     <Compile Include="Assets\Scripts\PlayerHealth.cs" />
-     <Compile Include="Assets\Scripts\PlayerWeapons.cs" />
+     <Compile Include="Assets\Scripts\Player\PlayerControllerScript.cs" />
+     <Compile Include="Assets\Scripts\Player\PlayerHealth.cs" />
+     <Compile Include="Assets\Scripts\Player\PlayerWeapons.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
