--- a/Prototype/Assembly-CSharp-vs.csproj
+++ b/Prototype/Assembly-CSharp-vs.csproj
@@ -46,16 +46,19 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\Bullet.cs" />
      <Compile Include="Assets\Scripts\ExitLevel.cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
-     <Compile Include="Assets\Scripts\HealthPickup.cs" />
      <Compile Include="Assets\Scripts\LaunchScreenManager.cs" />
      <Compile Include="Assets\Scripts\Obstacles\ElectricFence.cs" />
+     <Compile Include="Assets\Scripts\Obstacles\EnemyBullet.cs" />
+     <Compile Include="Assets\Scripts\Obstacles\EnemyHealth.cs" />
      <Compile Include="Assets\Scripts\Obstacles\Turret.cs" />
+     <Compile Include="Assets\Scripts\Obstacles\TurretLockOn.cs" />
+     <Compile Include="Assets\Scripts\Pickups\HealthPickup.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerControllerScript.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerHealth.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerWeapons.cs" />
+     <Compile Include="Assets\Scripts\Player\Weapons\PlayerBullet.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
